# ewb-electric-forecasting

./: .gitignore  README.md  data_loader.py  eda_app.py  feature_engineering.py  file_complier.py  merge_weather_energy.py  pyproject.toml  requirements.txt  sarimax.py
apps/: cli.py  train.py
apps/ui/: app.py  live.py
configs/: dataset_daily.yaml  experiment.yaml
configs/model/: lstm.yaml  lstm_daily.yaml  monthly_projection.yaml  prophet.yaml  prophet_daily.yaml  sarima.yaml  sarimax.yaml  sarimax_daily.yaml  seasonal_naive.yaml  seasonal_naive_daily.yaml  xgboost.yaml  xgboost_daily.yaml
dataset_engineering/: feature_engineering.py  file_complier.py  merge_weather_energy.py
docs/: architecture.md  data-contract.md  data_sourcing.md
exploratory_data_analysis/: per_meter_eda.py
final-prophet/prophet/tuning/: prophet_best.json  prophet_trials.csv
modelling/: lstm.py  output_utils.py  prophet.py  sarima.py  sarimax.py  xGBoost.py
notebooks/: eda.ipynb
src/core/: __init__.py  registry.py
src/core/evaluation/: __init__.py  metrics.py
src/core/features/: __init__.py  time_series.py
src/core/io/: __init__.py  config.py
src/core/models/: __init__.py  base.py  lstm.py  monthly_projection.py  prophet.py  sarima.py  sarimax.py  seasonal_naive.py  utils.py  xgb_wrapper.py  xgboost.py
src/core/pipelines/: __init__.py  predict.py  train.py  tune.py
src/core/serving/: live.py
tests/: test_smoke.py
tests/models/: test_monthly_projection.py
tools/: __init__.py  sarimax_debug.py  train_all_sarima_daily.py  train_all_sarimax_daily.py
